Name:                cranberry
Version:             0.1
Synopsis:            Time series forecast
Description:         Exponential smoothing forecast on Redis data
License:             AllRightsReserved
Author:              Erik Perkins
Maintainer:          erik.andrew.perkins@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable cranberry
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson > 1.2 && < 1.3,
    base >= 4.4 && < 5,
    bytestring >= 0.9.1 && < 0.11,
    hedis >= 0.9 && < 0.11,
    lens >= 3.7.6 && < 4.15,
    mtl >= 2 && < 3,
    snap >= 1.0 && < 1.1,
    snap-core >= 1.0 && < 1.1,
    snap-server >= 1.0 && < 1.2,
    snaplet-postgresql-simple > 1.1.0 && < 1.2,
    snaplet-redis >= 0.1.5 && < 1.2,
    text >=1.2.1 && < 1.3,
    twitter-conduit >= 0.3.0 && < 0.4,
    twitter-types >= 0.7,
    http-conduit >= 2.0 && < 2.4,
    conduit >= 1.1,
    conduit-extra >= 1.3,
    resourcet >= 1.0,
    amqp >= 0.18,
    time,
    utf8-string,
    hedis

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Test-suite cranberry-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base == 4.*,
    HUnit,
    test-framework,
    test-framework-hunit

  ghc-options: -O0 -Wall -rtsopts -fno-warn-unused-do-bind -Werror
  ghc-prof-options: -auto-all
